--- a/textEditor/style.css
+++ b/textEditor/style.css
@@ -54,15 +54,16 @@ body{
     /* border:2px solid red; */
     position: absolute;
     bottom:15%;
+    flex-wrap:wrap;
     height: 20vh;
     /* background-color: wheat; */
 }
 .functionBox div{
+    flex-grow:1;
     cursor: pointer;
     background-color: rgb(112, 213, 11);
     display: flex;
     /* color:white; */
-    
     flex-basis: 15%;
     flex-direction: column;
     align-items: center;
