--- a/textEditor/style.css
+++ b/textEditor/style.css
@@ -1,5 +1,5 @@
 *{
-    user-select:none;
+    user-select: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -44,26 +44,29 @@ body{
     width: 100%;
 }
 .functionBox{
+    
+    flex-wrap: wrap;
     width: 100vw;
     /* border:2px solid red; */
     display: flex;
-    gap:10px;
+    gap:5px;
     align-items: center;
     justify-content: center;
     background-color: transparent;
     /* border:2px solid red; */
     position: absolute;
-    bottom:15%;
-    flex-wrap:wrap;
+    bottom:20%;
     height: 20vh;
     /* background-color: wheat; */
 }
 .functionBox div{
-    flex-grow:1;
+    border-radius: 4px;
+    flex-grow: 1;
     cursor: pointer;
     background-color: rgb(112, 213, 11);
     display: flex;
     /* color:white; */
+    
     flex-basis: 15%;
     flex-direction: column;
     align-items: center;
